# examples_unit_tests

./: README.md
java-unit-tests/: pom.xml
java-unit-tests/src/main/java/com/example/first_module/: Calculator.java
java-unit-tests/src/main/java/com/example/second_module/: Car.java
java-unit-tests/src/main/java/com/example/third_module/: Calendar.java  Item.java  ShopClient.java
java-unit-tests/src/test/java/com/example/first_module/: CalculatorTest.java
python-unit-tests/: .gitignore  pyproject.toml
python-unit-tests/my_package/: __init__.py
python-unit-tests/my_package/first_module/: basic_calc_func.py
python-unit-tests/my_package/second_module/: car.py
python-unit-tests/my_package/third_module/: calendar.py  item.py  shop_client.py
python-unit-tests/tests/first_module/: test_basic_calc_func.py
python-unit-tests/tests/second_module/: test_car.py  test_car_with_fixture.py
python-unit-tests/tests/third_module/: test_calendar.py  test_item.py  test_shop_client.py
scala-unit-tests/: .gitignore  build.sbt
scala-unit-tests/src/main/scala/first_module/: BasicCalcFunc.scala
scala-unit-tests/src/main/scala/second_module/: Car.scala
scala-unit-tests/src/main/scala/third_module/: Calendar.scala  CalendarUtils.scala  Item.scala  ShopClient.scala  Utils.scala
scala-unit-tests/src/test/scala/first_module/: BasicCalcFuncSpec.scala
scala-unit-tests/src/test/scala/second_module/: CarSpec.scala  CarWithFixturesSpec.scala
scala-unit-tests/src/test/scala/third_module/: CalendarSpec.scala  ItemSpec.scala  ShopClientSpec.scala
(+5 files in other folders)
